2011-01-11  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Remove uses of QFuture since it isn't supported on all platforms.
        https://bugs.webkit.org/show_bug.cgi?id=51204

        * platform/network/qt/QtNAMThreadSafeProxy.cpp:
        (WebCore::QtNAMThreadSafeProxy::QtNAMThreadSafeProxy):
        (WebCore::QtNAMThreadSafeProxy::localCookiesForUrl):
        (WebCore::QtNAMThreadSafeProxy::localWillLoadFromCache):
        * platform/network/qt/QtNAMThreadSafeProxy.h:
        (WebCore::QtNAMThreadSafeProxy::cookiesForUrl):
        (WebCore::QtNAMThreadSafeProxy::willLoadFromCache):
2011-01-11  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Remove uses of QFuture since it isn't supported on all platforms.
        https://bugs.webkit.org/show_bug.cgi?id=51204

        * QtTestBrowser/webpage.h:
        (QtNAMThread::QtNAMThread):
        (QtNAMThread::networkAccessManager):
        (QtNAMThread::run):
2011-01-11  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Remove uses of QFuture since it isn't supported on all platforms.
        https://bugs.webkit.org/show_bug.cgi?id=51204

        * tests/qwebpage/tst_qwebpage.cpp:
        (QtNAMThread::QtNAMThread):
        (QtNAMThread::networkAccessManager):
        (QtNAMThread::run):

Canonical link: https://commits.webkit.org/65798@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75502 268f45cc-cd09-0410-ab3c-d52691b4dbfc