WebKit/qt/tests/qwebpage/tst_qwebpage.cpp
@@ -2683,8 +2683,8 @@ void tst_QWebPage::supportedContentType()
 class QtNAMThread : public QThread {
 public:
     QtNAMThread()
+        : m_qnam(0)
     {
-        m_qnamFuture.reportStarted();
     }
     ~QtNAMThread()
     {
@@ -2692,20 +2692,29 @@ public:
         wait();
     }
 
-    QFuture<QNetworkAccessManager*> networkAccessManager()
+    QNetworkAccessManager* networkAccessManager()
     {
-        return m_qnamFuture.future();
+        QMutexLocker lock(&m_mutex);
+        while (!m_qnam)
+            m_waitCondition.wait(&m_mutex);
+        return m_qnam;
     }
 protected:
     void run()
     {
-        QNetworkAccessManager* qnam = new QNetworkAccessManager;
-        m_qnamFuture.reportFinished(&qnam);
+        Q_ASSERT(!m_qnam);
+        {
+            QMutexLocker lock(&m_mutex);
+            m_qnam = new QNetworkAccessManager;
+            m_waitCondition.wakeAll();
+        }
         exec();
-        delete qnam;
+        delete m_qnam;
     }
 private:
-    QFutureInterface<QNetworkAccessManager*> m_qnamFuture;
+    QNetworkAccessManager* m_qnam;
+    QMutex m_mutex;
+    QWaitCondition m_waitCondition;
 };
 
 void tst_QWebPage::networkAccessManagerOnDifferentThread()
